--- a/login/STYLES.css
+++ b/login/STYLES.css
@@ -4,7 +4,7 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-  font-family: "oswald", sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 body{
@@ -12,7 +12,7 @@ body{
 justify-content:center;
 align-items:center;
  min-height:100vh;
- background:url('./ img/img.jpg');
+ background:url(""./ img/img.jpg");
  background-size: cover;
  background-position: center;
 }
