--- a/login/STYLES.css
+++ b/login/STYLES.css
@@ -4,7 +4,7 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-  font-family: "Oswald", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body{
@@ -12,7 +12,7 @@ body{
 justify-content:center;
 align-items:center;
  min-height:100vh;
- background:url(""./ img/img.jpg");
+ background:url('./ img/img.jpg');
  background-size: cover;
  background-position: center;
 }
@@ -20,4 +20,18 @@ align-items:center;
 .container{
   width: 420px;
 background-color: transparent;
-border:2px solid  
+border:2px solid  rgba(255, 255, 255, 0.2);
+border-radius: 10px;
+padding: 30px 40px;
+box-shadow:0 0 10px rgba(0, 0, 0, 0.2);
+}
+.container h1{
+  font-size: 36px;
+  text-align: center;
+}
+
+.input-box{
+  position:relative;
+  width:100%;
+  
+}
