ADICIONEI MAIS UM ITEM

--- a/login/styles.css
+++ b/login/styles.css
@@ -12,7 +12,7 @@ body{
   justify-content:center;
   align-items:center;
   min-height:100vh;
-  background:url('./ img/img.jpg');
+  background:url('./login/img/ChatGPT Image 26 de fev. de 2026, 00_10_36.png');
   background-size: cover;
   background-position: center;
 }
