--- a/login/styles.css
+++ b/login/styles.css
@@ -20,10 +20,11 @@ body{
 .container{
   width: 420px;
   background-color: transparent;
-  border:2px solid  rgba(255, 255, 255, 0.062);
+  border:2px solid  rgba(255,255,255, .2);
   border-radius: 10px;
   padding: 30px 40px;
-  box-shadow:0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow:0 0 10px rgba(0,0,0,.1);
+  backdrop-filter:blur(120px);
 }
 .container h1{
   font-size: 36px;
@@ -34,14 +35,14 @@ body{
   position:relative;
   width:100%;
   height: 50px;
-  MARGIN: 30px;
+  MARGIN: 30px 0;
 }
 
 .input-box input{
   width:100%;
   height:100%;
   background-color: transparent;
-  border:2px solid rgba(255, 255, 255, 0.2);
+  border:2px solid rgba(255, 255, 255, .2);
   outline:none;
   font-size:  16px;
   color: #fff;
@@ -90,11 +91,12 @@ body{
   color: #333;
   font-weight: 600;
   box-shadow:0 0 10px rgba(0,0,0,.1);
+  margin-top: 20px;
 }
 
 .login :hover{
   background-color:transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(255, 255, 255, .2);
   color:#fff;
   transition:0.5s;
 }
@@ -107,7 +109,7 @@ body{
 .register-link a{
   text-decoration:none;
   color:#fff;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .register-link a:hover{
